--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".EditActivity"
+            android:name=".createCounterActivity"
             android:label="@string/title_activity_edit"
             android:parentActivityName=".MainActivity">
             <meta-data
