--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="dehaan.kdehaan_countbook.MainActivity" />
         </activity>
+        <activity
+            android:name=".addCounterActivity"
+            android:label="@string/title_activity_create"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="dehaan.kdehaan_countbook.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
